# uwxpy

./: .clinerules  .gitignore  Gemini.md  README.en.md  README.md  pyproject.toml  requirements.txt  tbump.toml
.github/workflows/: release.yml
configs/: app_config.json  logger.json  uwxpy.sample.json
doc/: PROMPT.md
prompt/: prompt_modes.json
src/uwxpy/: __init__.py
src/uwxpy/configs/: app_init.py  uwxpy.py
src/uwxpy/core/: aiartworks.py  x_client.py
src/uwxpy/exceptions/: x_api_error.py
src/uwxpy/models/: tweet_result.py  x_api.py
src/uwxpy/service/: analysis_prompt_service.py  generate_prompt_service.py
src/uwxpy/service/core/: base_prompt_service.py
tests/: generate_prompt.py  test-001.py  test-002.py  test-003.py  test-004.py  test-005.py  test-006.py  test-007_uwxpy_enc.py
tests/prompt/: analysis_prompt_templates.json  personas.json  style_anchor.json  words_data.json
